name:                halite-haskell
version:             0.1.0.0
synopsis:            Halite starter pack for Haskell
author:              Jesse Paroz
maintainer:          jesse.paroz@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    lib
  exposed-modules:   Halite, Halite.Networking, Halite.Types
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5

executable MyBot
  hs-source-dirs:    src
  main-is:           MyBot.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , halite-haskell
                   , random

executable RandomBot
  hs-source-dirs:    src
  main-is:           RandomBot.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , halite-haskell
                   , random
