name:                halite-haskell
version:             0.1.0.0
synopsis:            Halite starter pack for Haskell
author:              Jesse Paroz
                   , Josef Vonasek
maintainer:          jesse.paroz@gmail.com
                   , j.f.vonasek@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    lib
  exposed-modules:   Halite, Halite.Networking, Halite.Types, Halite.Classes, Halite.Logic
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , random

executable MyBot
  hs-source-dirs:    src
  main-is:           MyBot.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , halite-haskell
                   , random

executable RandomBot
  hs-source-dirs:    src
  main-is:           RandomBot.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , halite-haskell
                   , random
